deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: brenox-engine
  labels:
    app.kubernetes.io/component: api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/component: api
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
